# lsd2

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.bash  setup.py
.github/workflows/: main.yml
examples/: csv_to_fits.py  example_usage.ipynb  hipscat_tests.py  ids_in_parquet.py  ivoa_demo.ipynb  parquet_transpose.py  pixel_density_map.py  small_sky_demo.py  small_sky_demo_dask.py  td_demo.py  td_demo_new.py  td_demo_new_dask.py  vis_map.py
hipscat/: __init__.py  catalog.py  dask_utils.py  lsd2_io.py  margin_utils.py  partitioner.py  requirements.txt  util.py
hipscat/src/: __init__.py  __main__.py  catalog.py  dask_utils.py  partitioner.py  util.py
src/catalog/: catalog.py
src/lsd2/hipscat/: __init__.py  __main__.py  catalog.py  dask_utils.py  lsd2_io.py  spatial_result.py
src/lsd2/registry/: __init__.py  registry.py
src/partitioner/: __init__.py  __main__.py  arguments.py  axs_runner.py  dask_runner.py  histogram.py  io_helper.py  io_utils.py  map_reduce.py  runner.py  single_runner.py
tests/: __init__.py  dask_musings.ipynb  data_paths.py  hipscat_tests.py  test_file_ops.py
tests/catalog/: test_catalog.py
tests/data/: constants.py
tests/data/small_sky_parts/: catalog_00_of_05.csv  catalog_02_of_05.csv  catalog_03_of_05.csv
tests/partitioner/: data_paths.py  file_testing.py  test_argument_validation.py  test_arguments_commandline.py  test_dask_runner.py  test_histogram.py  test_io_utils.py  test_map_reduce.py  test_runner.py  test_single_runner_end_to_end.py
tests/partitioner/data/small_sky/: catalog.csv
(+32 files in other folders)
