[project]
name = "lsd2"
license = {file = "LICENSE"}
readme = "README.md"

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]

[metadata]
description = "Quantile parametrization of probability distribution functions"
long_description = { file = "README.md" }
url = "https://github.com/astronomy-commons/lsd2"

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools_scm[toml]>=7.0.0",
    "setuptools_scm_git_archive"
]
build-backend = "setuptools.build_meta"
